--- a/sass/modules/_tertiary-nav.scss
+++ b/sass/modules/_tertiary-nav.scss
@@ -118,7 +118,7 @@
 #tertiary-nav.tertiary-nav-homepage{
 	
 	@media screen and (min-width: 43em){
-		margin-left: -21.58203125%;  //442/2048
+		margin-left: -24.58203125%;  //442/2048 + 3%
 		width: 21.58203125%;  //442/2048
 	}
 	
